Fix overflowing scheduling checks

--- a/esp/public/media/default_styles/scheduling_checks.css
+++ b/esp/public/media/default_styles/scheduling_checks.css
@@ -114,6 +114,11 @@ table {
 	padding-top: 8px;
 }
 
+.table-wrapper {
+    width: 100%;
+    overflow-x: auto;
+}
+
 input[name="refresh_interval"] {
     width: 40px;
     float: right;
